fix Reasons and Looking version tablet and desktop

--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -179,11 +179,8 @@ body {
 	display: flex;
 	justify-content: center;
 	cursor: pointer;
-	
-}
-.looking__buttom .buttom {
-	
 	color: #f26002;
+	text-decoration: none;
 	text-align: center;
 	font-family: Roboto;
 	font-size: 20px;
@@ -199,21 +196,45 @@ body {
 
 
 //Main reasons
-.reasons__container {
+.reasons {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	padding: 0 15px;
-	height: 624px;
 	background: #eff9ff;
+	@media all and (min-width: 768px) {
+		padding: 0 39px;
+	}
+	@media all and (min-width: 1200px) {
+		padding: 0 85px;
+	}
 }
 
-.reasons__title .title {
-	margin-top: 30px;
+.reasons__title {
+	font-family: RobotoSlab;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.25;
+  text-align: center;
+  color: #000000;
+	margin-top: 0px;
+	padding-top: 30px;
+	text-align: center;
 	margin-bottom: 0;
+	@media all and (min-width: 768px) {
+		font-size: 26px;
+		line-height: 1.73;
+		margin-bottom: 45px;
+	}
+	@media all and (min-width: 1200px) {
+		font-size: 32px;
+		line-height: 1.41;
+		padding-top: 60px;
+
 }
-.reasons__container .subtitle {
+}
+/*.reasons__container .subtitle {
 	margin-top: 30px;
 	margin-bottom: 0;
 }
@@ -225,89 +246,139 @@ body {
 }
 .reasons__buttom .buttom {
 	padding-bottom: 38px;
+}*/
+.reasons__container {
+	box-sizing: border-box;
+	margin: 0 55px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
+	@media all and (min-width: 768px) {
+		//display: 100vh;
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-template-rows: 1fr 1fr;
+		grid-gap: 27px;
+		margin: 0;
+		//grid-template-areas: "reasons__title" "reasons__subtitle1" "reasons__subtitle2" "reasons__subtitle3" "reasons__buttom" "reasons__buttom";
+	}
+	@media all and (min-width: 1200px) {
+		grid-gap: 26px;
+	}
 }
-@media all and (min-width: 768px) {
-	.reasons__container {
-	display: 100vh;
-	display: grid;
-	grid-template-columns: 3fr 3fr 3fr;
-	grid-template-rows: 20% 60% 20%;
-	grid-template-areas: "reasons__title" "reasons__subtitle1" "reasons__subtitle2" "reasons__subtitle3" "reasons__buttom" "reasons__buttom";
-	
 
-.reasons__title {
-	grid-column: 1/4;
-}
 
-.reasons__buttom {
-	grid-column: 1/4;
-	margin: auto;
-	
-}
-}
-}
 
-.reasons__container p {
-	width: 180px;
-	height: 63px;
+.reasons__container .text {
+	//width: 180px;
+	//height: 63px;
 	text-align: center;
 	font-family: Roboto;
 	font-size: 18px;
 	line-height: 1.67;
 	text-align: center;
 	color:#000000;
+	margin: 0;
+	@media all and (min-width: 768px) {
+		font-size: 20px;
+		margin-top: 0;
+	}
 }
 .reasons__container .subtitle {
 	text-align: center;
-	width: 184px;
-	height: 30px;
+	//width: 184px;
+	//height: 30px;
 	font-family: RobotoSlab;
 	font-size: 18px;
 	font-weight: bold;
 	line-height: 1.67;
 	text-align: center;
 	color: #000000;
+	margin-top: 45px;
+	margin-bottom: 0;
+	@media all and (min-width: 768px) {
+		margin-top: 0;
+		margin-bottom: 14px;
+		font-size: 24px;
+  	line-height: 1.25;
+	}
 }
-.reasons__title .title {
+/*.reasons__title //{
 	//width: 290px;
 	//height: 30px;
+	margin-top: 0;
+	padding-top: 30px;
 	font-family: RobotoSlab;
 	font-size: 24px;
 	font-weight: bold;
 	line-height: 1.25;
 	text-align: center;
 	color: #000000;
-}
+	@media all and (min-width: 768px) {
+
+	}
+	@media all and (min-width: 1200px) {
+
+	}
+}*/
 
 .reasons__buttom {
 	height: 45px;
 	width: 184px;
 	border-radius: 22.5px;
 	background-color: #f26002;
-	margin-bottom: 38px;
+	margin-bottom: 60px;
+	margin-top: 45px;
 	text-align: center;
 	display: flex;
 	justify-content: center;
 	cursor: pointer;
-}
-.buttom  {
-	height: 45px;
-	width: 184px;
 	color: #ffffff;
 	font-family: Roboto;
 	text-decoration: none;
 	font-size: 20px;
 	font-weight: 500;
 	line-height: 2.25;
-	border-radius: 22.5px;
+	align-self: center;
+
 	transition: background-color linear .7s, box-shadow ease .7s;
 	&:hover {
 		background-color: #304268;
 		box-shadow: 0px 5px 10px rgba(black, .5);
-    }
+		}
+		@media all and (min-width: 768px) {
+			margin: 30px auto 60px;
+			width: 210px;
+			grid-column: 2/3;
+			grid-row: 2/3;
+		}
+		@media all and (min-width: 1200px) {
+			width: 255px;
+		}
 }
+.reasons__subtitle {
+	margin-bottom: 45px;
+	@media all and (min-width:768px) {
+		width: 212px;
+		margin: 0 auto;
+	}
+}
+@media all and (min-width: 768px) {
+	.reasons__subtitle1 {
+			grid-column: 1/2;
+			grid-row: 1/2;
+	}
+	.reasons__subtitle2 {
+			grid-column: 2/3;
+			grid-row: 1/2;
 
-
+	}
+	.reasons__subtitle3 {
+			grid-column: 3/4;
+			grid-row: 1/2;
+	}
+}
 
 //Footer
 .footer__container__button {
